...
          ),
        ),
        const SizedBox(height: AppSpacing.md),

        // Botón principal (mascota)
        Tooltip(
          message: _isExpanded ? 'Cerrar opciones' : 'Agregar nuevo producto',
          child: FloatingActionButton.large(
            heroTag: 'toggleMenu',
            onPressed: toggleMenu,
            backgroundColor: Colors.transparent,
            elevation: 0,
            focusElevation: 0,
...
